kubernetes/overlays/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheung-may1
  annotations:
    # nginx ingress
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # cert-manager
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: clusterissuer-letsencrypt-production
    # external-dns
    external-dns.alpha.kubernetes.io/hostname: api.domain.com

spec:
  rules:
  - host: api.domain.com
    http:
      paths:
        - path: /(.*)
          backend:
            serviceName: cheung-may1
            servicePort: http
  tls:
  - hosts:
    - api.domain.com
    secretName: cheung-may1-tls-secret
